Updated static files

--- a/static/courses.html
+++ b/static/courses.html
@@ -86,7 +86,7 @@
         </main>
 
         <footer>
-            <p>&copy; Abhishek.Veeramalla</p>
+            <p>&copy; Varshil Desai</p>
         </footer>
     </body>
 </html>
