--- a/static/home.html
+++ b/static/home.html
@@ -85,7 +85,7 @@
     </main>
 
     <footer>
-        <p>&copy; Abhishek.Veeramalla</p>
+        <p>&copy; Varshil Desai</p>
     </footer>
 </body>
 </html>
