--- a/static/home.html
+++ b/static/home.html
@@ -67,7 +67,7 @@
 
     <main>
         <section>
-            <h1>Learn DevOps from Basics from Varshil Desai</h1>
+            <h1>Learn DevOps from Basics with Varshil Desai</h1>
             <p>The main purpose of this website is to guide people on how to learn DevOps 
                 from basics for Free. We will provide you with the best resources to learn.
             </p>
