--- a/static/home.html
+++ b/static/home.html
@@ -79,7 +79,7 @@
         </section>
 
         <section>
-            <h2>Courses Offered</h2>
+            <h2>Courses Offered for Free</h2>
             <p>Please look at the <a href="courses">courses</a> section.</p>  
         </section>
     </main>
